--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -1,14 +1,14 @@
 {
   "name": "complete-intro-to-react-v8",
   "version": "1.0.0",
-  "description": "",
+  "description": "Complete Intro to React v8 project",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"**/src/**/*.{js,jsx}\"",
-    "lint": "eslint \"**/src/**/*.{js,jsx}\" --quiet"
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
   "repository": {
     "type": "git",
